Fix alignment for likert content answers in presentation

--- a/src/app/components/shared/statistic-content/statistic-choice/statistic-choice.component.scss
+++ b/src/app/components/shared/statistic-content/statistic-choice/statistic-choice.component.scss
@@ -20,11 +20,11 @@
   width: 80px;
 }
 
-.chart-answer-label {
-  &:not(.abstention-label) {
-    margin: 0;
-  }
+.no-margin {
+  margin: 0;
+}
 
+.chart-answer-label {
   font-size: 10px;
   width: 100px;
   text-align: center;
